--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -61,7 +61,7 @@ FNG_GOV_JAP:0 "Japan chose the Fengtian Government"
 FNG_GOV_PEP:0 "The People chose the Fengtian Government"
 FNG_GOV_JAP_Zhang:0 "Japan chose Zhang Xueliang"
 FNG_GOV_JAP_DECIDE:0 "Japan let us Chose our Head of Government"
-FNG_GOV_MET:0 "Fengtian choses Feng Yuxiang Methodist"
+FNG_GOV_MET:0 "Fengtian chooses Feng Yuxiang Methodist"
 SQI_TRUE_CHRIS:0 "Shangqing are the True Christians"
 FNG_GOV_MET_JAP:0 "Fengtian choses Feng Yuxiang Methodist"
 FNG_SQI_ALL:0 "Fengtian allies with Shangqing"
@@ -447,14 +447,13 @@ fengtian.43.b:0 "Beijing is our new capital"
 fengtian.43.c:0 "Nanjing is our new capital"
 
 ### New Fengtian Events ###
-
 fengtian.new.1.t:0 "Huanghanhui Crackdown"
 fengtian.new.1.d:0 "The Huanghanhui, or Imperial Han Society, has been found to be using bribes and threats of violence to coerce low-level members of the Assembly. Unfortunately this information has gone public, even as the Assemblymen in question have been removed from office, and local police pursue additional suspects. \n\n Shortly after information regarding this incident was presented to Japanese authorities, Kempeitai agents were observed entering an enclosed compound outside Mukden, and reports indicate gunfire was exchanged. Over a dozen bodies were removed from the premises, and it would be unwise to pursue this matter any further."
 fengtian.new.1.a:0 "Troubling"
 fengtian.new.2.t:0 "Communications Clique Leads Railroad Strikes"
 fengtian.new.2.d:0 "The Communications Clique, with its widespread influence in Chinese-owned Manchurian railroads like the CER, has resorted to encouraging union activity and strikes to compensate for its recent losses of influence in government. The Clique will likely only go so far, for risk of creating something it cannot control, but their methods have already been fairly successful in demonstrating their political and economic clout."
 fengtian.new.2.a:0 "Unfortunate but necessary"
-#Land Reform Events#
+#Land Reform Events
 fengtian.new.3.t:0 "Land Disputes in Heilongjiang"
 fengtian.new.3.d:0 "As a product of various socio-economic changes, such as the steady shift of seasonal workers from the agricultural north to industrial jobs in Fengtian Province, land disputes have begun to flare up at an alarming rate. Normally these matters would be handled by the local Xiangshen, landlords, retired officials, clan elders, and scholars who 'represent' peasants in meetings with county officials. On this occasion, however, a large collection of peasants have bypassed local authorities and are attempting to petition the government directly. Normally such a petition, unworthy of the central government's attention, would be brushed aside, but unfortunately the situation has attracted the attention of the Asahi Shimbun, a leftist Japanese newspaper. \n\n The local Xiangshen, believing this matter to be solely within their jurisdiction, request that they be allowed to settle the matter themselves, brushing aside accusations of favouritism and corruption by the peasants. On the one hand, throughout all of Chinese history the Central Government has never truly been able to exert influence over the Xiangshen, but on the other the peasants grow increasingly desperate, and the entire region is watching."
 fengtian.new.3.a:0 "Support the Xiangshen"
@@ -467,7 +466,7 @@ fengtian.new.5.t:0 "Land Reform Reaches the Assembly"
 fengtian.new.5.d:0 "It is unusual for members of the Recovery League to stray far from their usual statements about southern reclamation, or from the scripts prepared for them by deep-pocketed 'friends', but some more liberal minded members of the Assembly have received a landslide of peasant petitions regarding land reform, and have decided to champion their cause. They argue that if our republican government aims to truly embody the values of the Xinhai Revolution and to differentiate itself from the archaic Qing, it must satisfy the needs of the common people, and strip away the sort of feudalism that the Xiangshen represent. \n\n This group of vocal politicians remains a minority amid an otherwise indifferent Assembly, and advisers warn that the Xiangshen as a whole are not to be trifled with, but this decision ultimately lies in the Marshal's hands."
 fengtian.new.5.a:0 "Support the Xiangshen"
 fengtian.new.5.b:0 "Support widespread land reform"
-#Land Reform Event Conclusions#
+#Land Reform Event Conclusions
 fengtian.new.6.t:0 "Peasant Unrest Quelled"
 fengtian.new.6.d:0 "Given a taste of land reform, but denied its full flavor, unsatisfied peasants rose up in several northern villages, only to be put down by local garrisons. To add to the sad and embarrassing situation, the commander of a nearby Japanese brigade patrolling the Russian border decided to intervene, adding the impression that foreign influence was behind the crackdown, and that the central government is incapable of keeping order without outside assistance. \n\n This situation might have been handled better."
 fengtian.new.6.a:0 "Damnable peasants!"
@@ -477,7 +476,7 @@ fengtian.new.7.a:0 "What a disaster!"
 fengtian.new.8.t:0 "Land Reform Underway"
 fengtian.new.8.d:0 "For better or worse, land reform is now underway at both the local and national levels, with officials superseding the local Xiangshen to assert the central government's sovereignty for the first time in hundreds of years. However, while they have used that time to thoroughly game the machine of local administration, they were also its designers and engineers, forcing officials to proverbially re-invent the wheel. While many are satisfied, the economy is certain to suffer considerably, and it is unclear just how far the reforms will be able to go."
 fengtian.new.8.a:0 "This is the price of progress"
-#The Fate of Mantetsu Schooling#
+#The Fate of Mantetsu Schooling
 fengtian.new.9.t:0 "The Fate of Mantetu Schooling"
 fengtian.new.9.d:0 "Mantetsu has long maintained a series of privately run schools originally intended for the sons and daughters of employees, as well as Japanese immigrants, which pride themselves on providing an education comparable to or even exceeding those available in the Home Islands. At the Japanese government's behest, these schools were more recently opened to the paying public, clearly as part of an attempt to spread Japanese culture and norms. However, the schools are crucial to education, not only because many children of Fengtian's wealthy are enrolled, but also because they provide their services at no government cost. \n\n Any attempt to close the Mantetsu schools to the public will be met not only with Japanese outrage, but a state of educational chaos as we try to pick up the slack. While the civil service has undergone reforms, it remains questionable as to whether our economy and domestic educational staff will be up to the challenge."
 fengtian.new.9.a:0 "Close the schools"
@@ -487,13 +486,13 @@ fengtian.new.10.d:0 "Scandal! In a most unfortunate turn of events, the Grand Ma
 fengtian.new.10.a:0 "What an embarrassment!"
 fengtian.new.10.b:0 "Close the Mantetsu schools!"
 fengtian.new.11.t:0 "Students Join the Youth League"
-fengtian.new.11.d:0 "In an embarassing and deeply damaging incident, a band of Chinese school children from Changchun recently announced their intention to join the Fengtian Youth League, which actively promotes Japanese interests in our country. Obviously their young minds are easily impressionable, but their parade through the streets of their home city, waving Japanese flags, has disgusted many, and invited outright enmity toward themselves and the government. Parents weep, asking how their children could become so warped, and demand an alternative to these dangerous Japanese-run schools."
+fengtian.new.11.d:0 "In an embarrassing and deeply damaging incident, a band of Chinese school children from Changchun recently announced their intention to join the Fengtian Youth League, which actively promotes Japanese interests in our country. Obviously their young minds are easily impressionable, but their parade through the streets of their home city, waving Japanese flags, has disgusted many, and invited outright enmity toward themselves and the government. Parents weep, asking how their children could become so warped, and demand an alternative to these dangerous Japanese-run schools."
 fengtian.new.11.a:0 "This is an outrage!"
 fengtian.new.11.b:0 "Close the schools!"
 fengtian.new.12.t:0 "Chinese Uniforms for Chinese Students"
 fengtian.new.12.d:0 "After some time and effort, as well as considerable expense, several new Chinese-run schools have pooled their resources to produce a new standard uniform for our students. While this may seem like a small change, the uniforms are a symbol of Chinese independence, as well as a disciplined and modern society. Surely a bright new future awaits!"
 fengtian.new.12.a:0 "A point of pride!"
-#NTC Railway Construction#
+#NTC Railway Construction
 fengtian.new.13.t:0 "Building the Jilin-Hailong Line"
 fengtian.new.13.d:0 "With the reorganisation of the Northeast Transportation Committee complete, several new railways have been proposed for construction and, in some cases, completion. The first major project is the Jilin-Hailong Railway, originally planned in 1927, which met serious delays in construction due to the eruption of war in the south, and concerted Japanese attempts to stall it. The line has been operating in limited capacity since 1931, but remains incomplete, with both Mantetsu and a collection of smaller Chinese companies vying for the contract to continue building. The Japanese claim, and perhaps correctly, that they could have the railway complete in half the time due to their resources and expertise, but choosing a Chinese company would do a great deal to demonstrate Chinese strength and independence."
 fengtian.new.13.a:0 "Choose a Chinese Company"
@@ -519,12 +518,12 @@ fengtian.new.19.t:0 "Railway Construction Workers Strike!"
 fengtian.new.19.d:0 "Chinese workers, complaining of inadequate pay and difficult working conditions, have refused to return to work in a carefully coordinated strike. Despite the presence of railway unions in the Northeast, their coordination in this instance suggests the involvement of the Communications Clique, possibly as part of an attempt to demonstrate their influence or retaliate for some perceived slight. \n\n While this turn of events effects them too, the Japanese are happy to watch us squabble amongst ourselves. The strike will end, but not without causing significant delays."
 fengtian.new.19.a:0 "Unfortunate"
 fengtian.new.20.t:0 "Delays Plague Railway Construction"
-fengtian.new.20.d:0 "The nature of the situation was fairly clear as soon as the first signs appeared; shipments that seemed to unaccountably go missing for several days on end, rails laid at just enough of an incorrect angle to require complete re-construction, and sudden inspections of the labor force by Japanese agents supposedly seeking 'dangerous criminals', inspections which inevitably required the suspension of work. \n\n These same tactics were employed by the Japanese during the 1920s against the Fengtian Clique's railway projects, attempting to slow and discredit Chinese railway construction in order to limit competition to Mantetsu, and now they seem to be delaying our efforts once again. Unfortunately, there is little we can do. "
+fengtian.new.20.d:0 "The nature of the situation was fairly clear as soon as the first signs appeared; shipments that seemed to unaccountably go missing for several days on end, rails laid at just enough of an incorrect angle to require complete re-construction, and sudden inspections of the labour force by Japanese agents supposedly seeking 'dangerous criminals', inspections which inevitably required the suspension of work. \n\n These same tactics were employed by the Japanese during the 1920s against the Fengtian Clique's railway projects, attempting to slow and discredit Chinese railway construction in order to limit competition to Mantetsu, and now they seem to be delaying our efforts once again. Unfortunately, there is little we can do. "
 fengtian.new.20.a:0 "Frustrating"
 fengtian.new.21.t:0 "Delays Plague Mantetsu Railway Construction"
 fengtian.new.21.d:0 "Despite Mantetsu's excellent engineers and equipment, the current railway construction project has encountered repeated delays as workers unaccountably go missing, materials vanish in the night, and bandits raid the camps alongside the rails, only to disappear before Japanese troops arrive. \n\n The local police and our intelligence services are unwilling to do much to investigate or solve these repeated incidents, instead preferring to watch the Japanese squirm. The fact that Mantetsu received the contract to build the railway is well known to the public, and some patriotic citizens appear to have taken matters into their own hands."
 fengtian.new.21.a:0 "What a pity"
-#Imperial Fury/Japanese Aid Cut#
+#Imperial Fury/Japanese Aid Cut
 fengtian.new.22.t:0 "Imperial Fury"
 fengtian.new.22.d:0 "Incensed by the decreasing power of their political proxy in the Assembly, the Japanese government today issued a statement declaring an end to various Fengtian aid programs, including sectors such as research, industrial development, agricultural development, and military armament. The aid should return in some time, as the Japanese cannot afford to let us grow too weak, but until then many functions of our state are crippled."
 fengtian.new.22.a:0 "A hard lesson"
