--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -5228,7 +5228,7 @@ BFA_national_populist:0 "Mossi Emipire"
 BFA_national_populist_ADJ:0 "Mossi"
 BFA_national_populist_DEF:0 "Mossi Emipire"
 BFA_paternal_autocrat:0 "Mossiland"
-BFA_paternal_autocrat_ADJ:0 ""Mossi""
+BFA_paternal_autocrat_ADJ:0 "Mossi"
 BFA_paternal_autocrat_DEF:0 "Mossiland"
 BFA_radical_socialist:0 "Burkina Faso"
 BFA_radical_socialist_ADJ:0 "Burkinabe"
