Now shouldn't be broken, and has real words

--- a/localisation/KR_Political_events_l_english.yml
+++ b/localisation/KR_Political_events_l_english.yml
@@ -28,6 +28,22 @@ very_high_popularity:0 "Very High Party Popularity"
 very_high_popularity_desc:0 "You'll get this if your party is above 80% popularity."
 popularity:0 "Popularity"
 
+### Development ###
+post_modern:0 "Post-Modern Economy"
+modern:0 "Modern Economy"
+semi_modern:0 "Semi-Modern Economy"
+industrial:0 "Industrial Economy"
+pre_industrial:0 "Pre-Industrial Economy"
+agricultural:0 "Agricultural Economy"
+subsistence:0 "Subsistence Economy"
+ready_for_post_modern:0 "We are ready to develop into a Post-Modern Economy"
+ready_for_modern:0 "We are ready to develop into a Modern Economy"
+ready_for_semi_modern:0 "We are ready to develop into a Semi-Modern Economy"
+ready_for_industrial:0 "We are ready to develop into a Industrial Economy"
+ready_for_pre_industrial:0 "We are ready to develop into a Pre-Industrial Economy"
+ready_for_agricultural:0 "We are ready to develop into a Agricultural Economy"
+development:0 "Development"
+
 ### Stability Effect ###
 EFFECT_CHANGE_LAW_stability:0 "Change our country's stability to '$NAME|Y$' which grants ($DESC$)."
 
