Names were to much

--- a/localisation/KR_Political_events_l_english.yml
+++ b/localisation/KR_Political_events_l_english.yml
@@ -29,19 +29,19 @@ very_high_popularity_desc:0 "You'll get this if your party is above 80% populari
 popularity:0 "Popularity"
 
 ### Development ###
-post_modern:0 "Post-Modern Economy"
-modern:0 "Modern Economy"
-semi_modern:0 "Semi-Modern Economy"
-industrial:0 "Industrial Economy"
-pre_industrial:0 "Pre-Industrial Economy"
-agricultural:0 "Agricultural Economy"
-subsistence:0 "Subsistence Economy"
-ready_for_post_modern:0 "We are ready to develop into a Post-Modern Economy"
-ready_for_modern:0 "We are ready to develop into a Modern Economy"
-ready_for_semi_modern:0 "We are ready to develop into a Semi-Modern Economy"
-ready_for_industrial:0 "We are ready to develop into a Industrial Economy"
-ready_for_pre_industrial:0 "We are ready to develop into a Pre-Industrial Economy"
-ready_for_agricultural:0 "We are ready to develop into a Agricultural Economy"
+highest_development:0 "Highest Development"
+very_high_development:0 "Very High Development"
+high_development:0 "High Development"
+medium_development:0 "Medium Development"
+low_development:0 "Low Development"
+very_low_development:0 "Very Low Development"
+lowest_development:0 "Lowest Development"
+ready_for_highest_development:0 "We are ready to advance to the Highest Development"
+ready_for_very_high_development:0 "We are ready to advance to Very High Development"
+ready_for_high_development:0 "We are ready to advance to High Development"
+ready_for_medium_development:0 "We are ready to advance to Medium Development"
+ready_for_low_development:0 "We are ready to advance to Low Development"
+ready_for_very_low_development:0 "We are ready to advance to Very Low Development"
 development:0 "Development"
 
 ### Stability Effect ###
