Effects for the new Mexico tree

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -18,7 +18,16 @@ MEX_Settlement_Of_The_North:0 "Settlement Of The North"
 MEX_Propoganda:0 "Hollywood Propaganda"
 MEX_Womans:0 "Woman's Rights Granted"
 MEX_Relig:0 "Religious Unity"
-
+MEX_banned_strikes:0 "Banned Strikes"
+MEX_Ejido_Militias_idea:0 "Ejido Militias"
+MEX_Improved_Conditions:0 "Good Working Conditions"
+MEX_Coop:0 "Ejido-Union Cooperation"
+MEX_Car_Land_Reform:0 " Cardenas' Land Reform"
+MEX_Better_Education:0 "Better Education"
+MEX_Sinarquist_Youth_idea:0 "Sinarquist Youth"
+MEX_Cheap_Imports:0 "Cheap Imports"
+MEX_Cars:0 "Mexican Automobile Industry"
+MEX_Tarrifs:0 "Protective Tarrifs"
 ### Parties ###
 MEX_social_democrat_party:0 "PRI"
 MEX_social_democrat_party_long:0 "Partido Revolucionario Institucional"
@@ -360,7 +369,15 @@ mexico.104.c:0 "English"
 mexico.105.t:0 "The Reintegration of the Mexican Cession"
 mexico.105.d:0 "After many years of extensive resettlement, intensive propaganda efforts and numerous crushed uprisings, organised revolt against Mexican governance has largely subsided. While some resistance persists among old militia extremists, Anglos at large have gradually come to terms with our rule and settlers are now a significant minority in the North. With Los Territorios Reconquistados firmly under our control, we've won unhindered access to its resources and industry."
 mexico.105.a:0 "Finally!"
-
+mexico.106.t:0 "Restructuring The Regime"
+mexico.106.d:0 "The Junta has now ruled for quite a while, and keeping the people under control has been difficult, some are calling for a restructuring of the regime, and we are faced with 3 options. The first option is to find an ally for the Junta, either the Industrialists or the Hacienderos, The second option is to restore the monarchy to try and gain legitimacy for our regime, The third option is to invite the Sinarquistas into our government to gain another ally in Mexico. What should we choose?"
+mexico.106.a:0 "Keep The Junta"
+mexico.106.b:0 "Restore The Monarchy"
+mexico.106.c:0 "Invite The Sinarquistas"
+mexico.107.t:0 "Choosing An Economic Plan"
+mexico.107.d:0 "It is time for Mexico to choose an economic plan for the coming years. On one hand we have Plan "Hope" which focuses on the civilian sector of our economy and improving infastructure and on the other hand we have Plan "Unity" which focuses on heavy industrial expansion and military industry. Which one should we pick?"
+mexico.107.a:0 "Plan Hope"
+mexico.107.b:0 "Plan Unity"
 ### Foci ###
 MEX_Embrace_Totalism:0 "Embrace Totalism"
 MEX_Establish_the_Maximato:0 "Establish The Maximato"
@@ -374,7 +391,7 @@ MEX_Military_Industrialisation:0 "Military Industrialisation"
 MEX_Mexican_Cars:0 "Mexican Automobile Industry"
 MEX_Modernise_The_Ejidos:0 "Modernise The Ejidos"
 MEX_Steel_Production:0 "Construct Steel Factories"
-MEX_Industrial_Mobilization:0 "Industrial Mobilisation"
+MEX_Industrial_Mobilisation:0 "Industrial Mobilisation"
 MEX_Nationalise_Oil:0 "Nationalise The Oil Industry"
 MEX_Legacy_Of_Zapata:0 "Legacy Of Zapata"
 MEX_Mexican_Socialism:0 "Mexican Socialism"
