New Mexican politics

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -76,8 +76,9 @@ mexico.7.c:0 "Arrest Calles and all those involved in this conspiracy!"
 mexico.8.t:0 "Presidential Elections, 1936"
 mexico.8.d:0 "The 1936 presidential elections have begun today. The many factions of the hegemonic Party of the Mexican Revolution (PRM), from the mainstream Villistas and Zapatistas to the anarchist Magonistas, the Social-Democrats and even the fringe Totalists, have all fielded their own candidates. Challenges for our next president range from internal political opposition to instability in the USA across the Rio Grande."
 mexico.8.a:0 "Pancho Villa will keep the revolutionary ideals alive"
-mexico.8.b:0 "Plutarco Elías Calles, the hard-line general"
-mexico.8.c:0 "Lazaro Cardenas, the middle-ground moderate"
+mexico.8.b:0 "Vincente Toledano, the dean of Mexican Syndicalism"
+mexico.8.c:0 "Plutarco Elías Calles, the hard-line general"
+mexico.8.e:0 "Lazaro Cardenas, the middle-ground moderate"
 mexico.9.t:0 "Reclaiming our lost territories"
 mexico.9.d:0 "In 1848, as a result of our defeat in the Mexican-American War, we were forced to cede nearly half of our territory to the United States as per the provisions of the Treaty of Guadalupe Hidalgo. The reversion of this treaty has been a dream for the Mexican people since then. Now, with the USA at war, this could be our chance to regain our lost lands and reassert Mexican control north of the Rio Grande, from California all the way to Texas!"
 mexico.9.a:0 "Demand the return of our territories"
