Spelling fixes for Mexico

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -27,7 +27,8 @@ MEX_Better_Education:0 "Better Education"
 MEX_Sinarquist_Youth_idea:0 "Sinarquist Youth"
 MEX_Cheap_Imports:0 "Cheap Imports"
 MEX_Cars:0 "Mexican Automobile Industry"
-MEX_Tarrifs:0 "Protective Tarrifs"
+MEX_Tarrifs:0 "Protective Tariffs"
+
 ### Parties ###
 MEX_social_democrat_party:0 "PRI"
 MEX_social_democrat_party_long:0 "Partido Revolucionario Institucional"
@@ -201,7 +202,7 @@ mexico.42.t:0 "Attack by Anglo guerrillas!"
 mexico.42.d:0 "The Anglo insurrectionists in the North have launched a full-on assault against our occupation forces!"
 mexico.42.a:0 "Damn them!"
 mexico.45.t:0 "The anti-clerical policies of Mexico"
-mexico.45.d:0 "Our president is a known militant atheist and an opponent of the Catholic Church. Over the past months, he and his close advisors have begun to move to enforce the anti-clerical articles of the Mexican Constitution of 1917 — including provisions such as depriving the Church of its property rights and depriving the clergy of a number of civil liberties."
+mexico.45.d:0 "Our president is a known militant atheist and an opponent of the Catholic Church. Over the past months, he and his close advisers have begun to move to enforce the anti-clerical articles of the Mexican Constitution of 1917 — including provisions such as depriving the Church of its property rights and depriving the clergy of a number of civil liberties."
 mexico.45.a:0 "Yes, begin persecution of the Catholic Church"
 mexico.46.t:0 "Catholic unrest"
 mexico.46.d:0 "The Catholics in our country are not reacting well to our persecution of their church, and they are beginning to rebel against us. Should the persecution continue?"
@@ -215,7 +216,7 @@ mexico.48.d:0 "The anti-Catholic persecution undertaken by Mexico's socialist pr
 mexico.48.a:0 "Support them, send supplies and volunteers"
 mexico.48.b:0 "We should not get involved"
 mexico.49.t:0 "Italian involvement in La Cristiada"
-mexico.49.d:0 "The Papist government of Italy has lent their support to the Catholic uprising in Central Mexico. Hundreds of their military advisors and a good cache of arms have arrived to the rebel-held lands. We can't tolerate their meddling in our internal affairs!"
+mexico.49.d:0 "The Papist government of Italy has lent their support to the Catholic uprising in Central Mexico. Hundreds of their military advisers and a good cache of arms have arrived to the rebel-held lands. We can't tolerate their meddling in our internal affairs!"
 mexico.49.a:0 "Damn them!"
 mexico.50.t:0 "The end of the Cristero Uprising"
 mexico.50.d:0 "The Mexican Army, after a tough fight, has managed to defeat the Cristero Uprising, also known as La Cristiada. At last, Mexico is free from the perfidious influence of the Catholic Church! We can now continue our reforms and keep up with our project of transforming the country into a respected atheist republic."
@@ -365,7 +366,7 @@ mexico.103.c:0 "Let the Protestants freely go about their business"
 mexico.104.t:0 "Status of Language in the Territories"
 mexico.104.d:0 "The majority of both the Mexican and Anglo populations do not speak the others' language, which is already causing incidents in the territories. While forcing the entire Anglo population to learn and speak Spanish would be… impractical, perhaps some basic public works could assist our troops and settlers in the North. The principal subject of today's Comité meeting is: From schools and government to restaurants and street signs, what will be the official language in the territories?"
 mexico.104.a:0 "Español"
-mexico.104.b:0 "Bilingüe / Bilingual"
+mexico.104.b:0 "Bilingüe/Bilingual"
 mexico.104.c:0 "English"
 mexico.105.t:0 "The Reintegration of the Mexican Cession"
 mexico.105.d:0 "After many years of extensive resettlement, intensive propaganda efforts and numerous crushed uprisings, organised revolt against Mexican governance has largely subsided. While some resistance persists among old militia extremists, Anglos at large have gradually come to terms with our rule and settlers are now a significant minority in the North. With Los Territorios Reconquistados firmly under our control, we've won unhindered access to its resources and industry."
@@ -379,6 +380,7 @@ mexico.107.t:0 "Choosing An Economic Plan"
 mexico.107.d:0 "It is time for Mexico to choose an economic plan for the coming years. On one hand we have Plan "Hope" which focuses on the civilian sector of our economy and improving infastructure and on the other hand we have Plan "Unity" which focuses on heavy industrial expansion and military industry. Which one should we pick?"
 mexico.107.a:0 "Plan Hope"
 mexico.107.b:0 "Plan Unity"
+
 ### Foci ###
 MEX_Embrace_Totalism:0 "Embrace Totalism"
 MEX_Establish_the_Maximato:0 "Establish The Maximato"
@@ -458,17 +460,17 @@ MEX_Economic_Reforms:0 "Economic Reforms"
 MEX_Invest_In_Industry:0 "Invest In Industry"
 MEX_Economic_Plan:0 "Economic Plan"
 MEX_Plan_Hope:0 "Plan 'Hope'"
-MEX_Develop_Infastructure:0 "Develop Infastructure"
+MEX_Develop_Infastructure:0 "Develop Infrastructure"
 MEX_Expand_Power_Plants:0 "Expand Power Plants"
 MEX_Rural_Development_Program:0 "Rural Development Program"
 MEX_Civilian_Sector:0 "Expand Civilian Sector"
 MEX_Continue_Civilian_Expansion:0 "Continue Civilian Expansion"
 MEX_Finish_Civillian_Expansion:0 "Finish Civilian Expansion"
-MEX_Reduce_Import_Tarrifs:0 "Reduce Import Tarrifs"
+MEX_Reduce_Import_Tarrifs:0 "Reduce Import Tariffs"
 MEX_End_Of_Plan_Hope:0 "End Of Plan 'Hope'"
 MEX_Plan_Unity:0 "Plan 'Unity'"
 MEX_New_Dockyards:0 "New Dockyards"
-MEX_Protective_Tarrifs:0 "Protective Tarrifs"
+MEX_Protective_Tarrifs:0 "Protective Tariffs"
 MEX_Heavy_Industry:0 "Heavy Industry"
 MEX_Continue_Industrial_Expansion:0 "Continue Industrial Expansion"
 MEX_Finish_Industrial_Expansion:0 "Finish Industrial Expansion"
