Hawaii is basically done!

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -41,8 +41,8 @@ HAW_constitution_desc:0 ""
 ### Economy Foci ###
 HAW_building_our_economy:0 "Building Our Economy"
 HAW_building_our_economy_desc:0 ""
-HAW_foreign_investment:0 "Foreign Investment" 
-HAW_foreign_investment_desc:0 ""
+HAW_hawaiian_bounty:0 "Bounty of Hawai'i" 
+HAW_hawaiian_bounty_desc:0 ""
 HAW_maratime_trade:0 "Maritime Trade"
 HAW_maratime_trade_desc:0 ""
 HAW_domestic_industry:0 "Domestic Industry"
@@ -115,7 +115,7 @@ HAW_american_protectorate:0 "American Protectorate"
 HAW_american_protectorate_desc:0 ""
 HAW_american_business:0 "American Business Ties"
 HAW_american_business_desc:0 ""
-HAW_american_freindship:0 ""
+HAW_american_freindship:0 "American Friendship"
 HAW_american_freindship_desc:0 ""
 HAW_american_tech_sharing:0 "University of the Free World"
 HAW_american_tech_sharing_desc:0 ""
@@ -174,8 +174,14 @@ HAW_big_five_support:0 "Big Five Support"
 HAW_republic_education:0 "Republican Education"
 HAW_multi_cultural_hawaii:0 "Multicultural Hawai'i"
 HAW_syndicalist_democracy:0 "Syndicalist Democracy"
-
-
+HAW_agraian_reform:0 "Agraian Reform"
+HAW_plantation_support:0 "Plantation Support"
+HAW_new_economy:0 "New Hawai'ian Economy"
+HAW_strategic_services:0 "Strategic Information Services"
+HAW_american_trade:0 "American Business Ties"
+HAW_international_trade:0 "Revolutionary Trade Connections" 
+HAW_entente_trade:0 "Entente Business Ties"
+HAW_japanese_trade:0 "Japanese Business ties"
 ### Cosmetic Tags ###
 HAW_kingdom_social_democrat:0 "Kingdom of Hawai'i"
 HAW_kingdom_social_liberal:0 "Kingdom of Hawai'i"
@@ -214,27 +220,16 @@ hawaii.3.a:0 "Excellent"
 hawaii.4.t:0 "Hawaii Occupies Midway, Wake and Other Pacific Islands"
 hawaii.4.d:0 "The garrisons on Wake and Midway have joined Hawaii to ensure that they are not occupied by another power. There is unfortunately nothing the US can do about it."
 hawaii.4.a:0 "Damn"
-hawaii.8.t:0 "Petitioning the Entente"
-hawaii.8.d:0 "The defeat of the Pacific States of America and United States of America at the hands of the CSA had left the islands of Hawaii with no allies and an uncertain future. The Entente appeared to be the natural choice to ally with against the CSA but people in Hawaii were worried that this could draw the islands into a war. Opinion was split on the islands."
-hawaii.8.a:0 "Send the request"
-hawaii.8.b:0 "We will stay on our own"
 hawaii.9.t:0 "Hawaii Requests Entry into the Entente"
 hawaii.9.d:0 "Hawaii has requested entry into the Entente. The strategic position of Hawaii makes them a valuable member for the Entente. There was concern that if Hawaii was added to the Entente, it would change the balance of power in the Pacific."
 hawaii.9.a:0 "A welcome addition"
 hawaii.9.b:0 "We should avoid a provocative move"
-hawaii.10.t:0 "Hawaii Joins the Entente"
-hawaii.10.d:0 "The Entente has accepted our petition for entry. Hawaii may just be able to survive with some strong allies."
+hawaii.10.t:0 "Hawai'i Joins the Entente"
+hawaii.10.d:0 "The Entente has accepted our petition for entry. Hawai'i may just be able to survive with some strong allies."
 hawaii.10.a:0 "A welcome addition"
-hawaii.11.t:0 "The Entente Refuses Hawaii"
-hawaii.11.d:0 "The Entente has refused our request for an alliance, Hawaii will stand alone."
+hawaii.11.t:0 "The Entente Refuses Hawai'i"
+hawaii.11.d:0 "The Entente has refused our request for an alliance, Hawai'i will stand alone."
 hawaii.11.a:0 "Damn"
-hawaii.12.t:0 "Expansion of Hawaii's Industry"
-hawaii.12.d:0 "The usual distribution of Hawaii's pineapples had been disrupted due to the American Civil War but the demand for them had not. Dole had emphasised the need to strengthen Hawaii's economy and expand it's industry. The pineapple companies of the islands began increasing production and building more facilities for the increased production."
-hawaii.12.a:0 "Behold our pineapples!"
-hawaii.13.t:0 "Resource Expansion"
-hawaii.13.d:0 "The necessity for Hawaii to expand it's resources as well as its industry has prompted a scouring of the islands for any natural resources that could be found."
-hawaii.13.a:0 "More fuel for the pineapple factories!"
-
 hawaii.14.t:0 "Island Agitators"
 hawaii.14.d:0 "The CSA's extensive network of spies had led to their learning of the labour issues that were cropping up on the islands in Hawaii. The islands were not part of the CSA's overall strategy but the plight of the workers was in the best interest of the CSA and if it happened to ensure the Hawaii islands came under the control of the CSA then so be it."
 hawaii.14.a:0 "Send in some men to support the workers."
@@ -313,4 +308,36 @@ hawaii.33.b:0 "The Reform Party Wins!"
 hawaii.33.c:0 "The National Liberal Party Wins!"
 hawaii.33.e:0 "The Progressive Party Wins!"
 
+hawaii.100.t:0 "Hawaii Requests Entry into the International"
+hawaii.100.d:0 "We have received a request from the Commune of Hawaii to join the International. A few years back this tiny land broke off from America and went through there own revolution. The strategic position of Hawaii makes them a valuable member for the International. However others were concerned about getting dragged into conflicts in that region."
+hawaii.100.a:0 "A welcome addition"
+hawaii.100.b:0 "We should avoid a provocative move"
+hawaii.101.t:0 "Hawai'i Joins the International"
+hawaii.101.d:0 "The International has accepted our petition for entry. Hawai'i may just be able to survive with some strong allies."
+hawaii.101.a:0 "A welcome addition"
+hawaii.102.t:0 "The International Refuses Hawai'i"
+hawaii.102.d:0 "The International has refused our request for an alliance, Hawai'i will stand alone."
+hawaii.102.a:0 "Damn"
+
+hawaii.103.t:0 "Hawaii Requests Entry into the Co-Prosparity Sphere"
+hawaii.103.d:0 "Hawaii has requested entry into the Greater East Asia Co-Prosperity Sphere. The strategic position of Hawaii makes them a valuable member for the Co-Prosperity Sphere. There was concern that if Hawaii was added to the Co-Prosperity Sphere, it would change the balance of power in the Pacific."
+hawaii.103.a:0 "A welcome addition"
+hawaii.103.b:0 "We should avoid a provocative move"
+hawaii.104.t:0 "Hawai'i Joins Japan"
+hawaii.104.d:0 "Japan has accepted our petition for entry. Hawai'i may just be able to survive with some strong allies."
+hawaii.104.a:0 "A welcome addition"
+hawaii.105.t:0 "Japan Refuses Hawai'i"
+hawaii.105.d:0 "Japan has refused our request for an alliance, Hawai'i will stand alone."
+hawaii.105.a:0 "Damn"
+
+hawaii.106.t:0 "Hawaii wishes to join the League of American States"
+hawaii.106.d:0 "Hawaii has requested entry into the League of American States.  The strategic position of Hawaii makes them a valuable member for the League not to mention the fact that just a couple of years ago, Hawaii was once part of America. Many are advocating for them to join the League while a few think that it would not be worth it. "
+hawaii.106.a:0 "A welcome addition"
+hawaii.106.b:0 "It is not worth it"
+hawaii.107.t:0 "Hawai'i Joins the League of American States"
+hawaii.107.d:0 "America has accepted our petition for entry. Hawai'i may just be able to survive with some strong allies."
+hawaii.107.a:0 "A welcome addition"
+hawaii.108.t:0 "America Refuses Hawai'i"
+hawaii.108.d:0 "America has refused our request for an alliance, Hawai'i will stand alone."
+hawaii.108.a:0 "Damn"
 
