--- a/localisation/KR_Russia_Domestic_l_english.yml
+++ b/localisation/KR_Russia_Domestic_l_english.yml
@@ -483,3 +483,7 @@ rusd.136.b:0 "There won't be any nobles in the Council!"
 rusd.137.t:0 "Yusupov's Corporation and foreign investors"
 rusd.137.d:0 "It turned out that using some special executive orders of the SPC, Yusupov has seized some foreign factories, which he has included in his monopoly. Though these factories were de-facto stolen from the Russian owners after the end of the Civil war by the foreigners, who didn't pay all taxes during the last decade, anyway they invested some money and now we should give them a compensation."
 rusd.137.a:0 "Felix, you have to warn us!"	
+
+rusd.138.t:0 "Savinkov's address to the nation."
+rusd.138.d:0 "Boris Savinkov, the closest associate of Supreme Ruler Kornilov, in his radio address to the Russian people announced that, driven by the desire to defend Russia from external and internal enemies, who try to take control over the country. He promised to deal with corruption inside state apparatus, conduct land reform, improve labour legislation and provide further recovery of the state. It seems, that the order finally returned to the country."
+rusd.138.a:0 "Finally..."	
