A few spelling fixes here and there

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -165,16 +165,17 @@ HAW_paternal_autocrat_party:0 "HFP"
 HAW_paternal_autocrat_party_long:0 "Hawai'i First Party"
 HAW_national_populist_party:0 "HFP"
 HAW_national_populist_party_long:0 "Hawai'i First Party"
+
 ### Ideas ###
 HAW_people_victory:0 "Revolutionary Hawai'i"
 HAW_socialist_educations:0 "Socialist Education"
 HAW_native_education:0 "Punana Leo"
-HAW_hawaii_renassiance:0 "Hawai'ian Renassiance"
+HAW_hawaii_renassiance:0 "Hawai'ian Renaissance"
 HAW_big_five_support:0 "Big Five Support"
 HAW_republic_education:0 "Republican Education"
 HAW_multi_cultural_hawaii:0 "Multicultural Hawai'i"
 HAW_syndicalist_democracy:0 "Syndicalist Democracy"
-HAW_agraian_reform:0 "Agraian Reform"
+HAW_agraian_reform:0 "Agrarian Reform"
 HAW_plantation_support:0 "Plantation Support"
 HAW_new_economy:0 "New Hawai'ian Economy"
 HAW_strategic_services:0 "Strategic Information Services"
@@ -182,6 +183,7 @@ HAW_american_trade:0 "American Business Ties"
 HAW_international_trade:0 "Revolutionary Trade Connections" 
 HAW_entente_trade:0 "Entente Business Ties"
 HAW_japanese_trade:0 "Japanese Business ties"
+
 ### Cosmetic Tags ###
 HAW_kingdom_social_democrat:0 "Kingdom of Hawai'i"
 HAW_kingdom_social_liberal:0 "Kingdom of Hawai'i"
@@ -319,7 +321,7 @@ hawaii.102.t:0 "The International Refuses Hawai'i"
 hawaii.102.d:0 "The International has refused our request for an alliance, Hawai'i will stand alone."
 hawaii.102.a:0 "Damn"
 
-hawaii.103.t:0 "Hawaii Requests Entry into the Co-Prosparity Sphere"
+hawaii.103.t:0 "Hawaii Requests Entry into the Co-Prosperity Sphere"
 hawaii.103.d:0 "Hawaii has requested entry into the Greater East Asia Co-Prosperity Sphere. The strategic position of Hawaii makes them a valuable member for the Co-Prosperity Sphere. There was concern that if Hawaii was added to the Co-Prosperity Sphere, it would change the balance of power in the Pacific."
 hawaii.103.a:0 "A welcome addition"
 hawaii.103.b:0 "We should avoid a provocative move"
