--- a/localisation/KR_Russia_Domestic_l_english.yml
+++ b/localisation/KR_Russia_Domestic_l_english.yml
@@ -317,7 +317,7 @@ rusd.961.b:0 "Invite Vladimir and restore the Romanovs as constitutional monarch
 rusd.961.c:0 "Restore the republic."
 
 rusd.97.t:0 "Boris Stürmer dies"
-rusd.97.d:0 "One of Russia's most experienced politicians, Boris Stürmer, has passed away due to a heart attack upon hearing the news of Kerensky's assasination. Born in 1848, Stürmer was one of the few people in Russia to remember the Crimean War. He was a symbol of Russia's tradition and continuity."
+rusd.97.d:0 "One of Russia's most experienced politicians, Boris Stürmer, has passed away due to a heart attack upon hearing the news of Kerensky's assassination. Born in 1848, Stürmer was one of the few people in Russia to remember the Crimean War. He was a symbol of Russia's tradition and continuity."
 rusd.97.a:0 "Memento mori."
 
 rusd.98.t:0 "Pyotr Struve dies"
@@ -333,9 +333,9 @@ rusd.100.b:0 "The liberal General Vasily G. Boldyrev will take his place as Prim
 rusd.101.t:0 "Vladimir Purishkevich dies"
 rusd.101.d:0 "A notable figure of the conservative movement, and perhaps the last true landowner in Russia has died yesterday in his rural estate. It is feared that his death may cause a great reshuffling on the right side of the political scene."
 rusd.101.b:0 "Felix Yusupov will replace him as Prime Minister."
-rusd.101.c:0 "We will have to nominate a new chairman of the comitee of Ministers."
+rusd.101.c:0 "We will have to nominate a new chairman of the committee of Ministers."
 
-rusd.1011.t:0 "A new Chairman for the Comitee of Ministers"
+rusd.1011.t:0 "A new Chairman for the Committee of Ministers"
 rusd.1011.d:0 "After Purishkevich's death Tsar Vladimir must now choose a new head of the Committee of Ministers."
 rusd.1011.a:0 "The moderate military man, Anton Denikin!"
 rusd.1011.b:0 "The reactionary military man, Pyotr Wrangel!"
@@ -434,7 +434,7 @@ rusd.125.d:0 "Maintenance of the democratic regime combined with the stable deve
 rusd.125.a:0 "Glamour in his democracy!"
 
 rusd.126.t:0 "Churchill Iron Curtain speech"
-rusd.126.d:0 "The Tsar Alexander University in Petrograd had the honour of hosting the important British statesman Winston Churchill. In his speech to the attending students he praised the great sacrifices the Russian nation has made in order to liberate the continent from the draconian rule of Germany and to keep it safe from the clutches of Syndicalism. He warned Russia to alway remain vigilant against the Syndicalist menace, which divides the entire continent behind a so-called Iron Curtain."
+rusd.126.d:0 "The Tsar Alexander University in Petrograd had the honour of hosting the important British statesman Winston Churchill. In his speech to the attending students he praised the great sacrifices the Russian nation has made in order to liberate the continent from the draconian rule of Germany and to keep it safe from the clutches of Syndicalism. He warned Russia to always remain vigilant against the Syndicalist menace, which divides the entire continent behind a so-called Iron Curtain."
 rusd.126.a:0 "We are always vigilant!"
 rusd.126.b:0 "Denounce his speech!"
 
@@ -443,7 +443,7 @@ rusd.127.d:0 "It has been 25 years since his imperial majesty Vladmir I Romanov 
 rusd.127.a:0 "God save the the Tsar!"
 
 rusd.128.t:0 "First Women's Division of Death"
-rusd.128.d:0 "Maria Bochkareva, Colonel of the Russian Army and Hero of the Weltkrieg and Russian Civil War have recently requested government to allow formation of the first women division by combining existing womens battalions of death which should later serve as basis for formation of a women's corps. Accepting this proposal will surely boost strength of our army and not to forget significant propaganda value - but conservative elements in our armed forces unwilling to change the status quo have to be taken into consideration as well..."
+rusd.128.d:0 "Maria Bochkareva, Colonel of the Russian Army and Hero of the Weltkrieg and Russian Civil War have recently requested government to allow formation of the first women division by combining existing women's battalions of death which should later serve as basis for formation of a women's corps. Accepting this proposal will surely boost strength of our army and not to forget significant propaganda value - but conservative elements in our armed forces unwilling to change the status quo have to be taken into consideration as well..."
 rusd.128.a:0 "Allow formation of the First Women's Division of Death"
 rusd.128.b:0 "This is unacceptable"
 
